Added class DetailActivity and navigation between pages is fully implemented

--- a/app/src/main/res/layout/detailpage.xml
+++ b/app/src/main/res/layout/detailpage.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".DetailActivity">
 
+    <TextView
+        android:id="@+id/detailTitle"
+        android:layout_width="359dp"
+        android:layout_height="115dp"
+        android:layout_margin="50dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="350dp"
+        android:text="pageTitle"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/escapeHatch2"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:text="back" />
 </androidx.constraintlayout.widget.ConstraintLayout>
