--- a/app/src/main/res/layout/detailpage.xml
+++ b/app/src/main/res/layout/detailpage.xml
@@ -26,4 +26,19 @@
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:text="back" />
+
+    <GridView
+        android:id="@+id/flowPane"
+        android:layout_width="354dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
